# curso_python

./: main.py
Analise de dados/: validacao_tributacao.py
Analise de dados/Material/: conexaoexel.py  meunotebook.ipynb  minhafuncao.py  saidas.xlsx  testefuncao.ipynb
Analise de dados/Material/.ipynb_checkpoints/: meunotebook-checkpoint.ipynb
Aulas/introducao_python/Explicacao/: print_input.py
Aulas/introducao_python/exercicio/: 01_print_input.py
Aulas/poo/: Poo.md  abstracao_de_dados.py
poo/: aula_02.py  exemplo.py
project/: pyproject.toml
server/data/: 01_criando_Banco.py  02_criando_tabela.py  03_Inserindo_dados.py  conexãoPytonFirebird.py  criando_tabela.py  dbpy.db
